fix scrolling overflow

--- a/src/style.css
+++ b/src/style.css
@@ -18,12 +18,6 @@ body {
 
 #app {
   background-color: rgba(0,0,0,0.5);
-  width: 100%;
-  min-height: 100vh;
-
-  display: grid;
-  place-items: center;
-  padding: 2rem;
 }
 
 a {
